package com.fullcycle.admin.catalogo.application;

public abstract class NullaryUseCase<OUT> {

    public abstract OUT execute();

}
