package com.fullcycle.admin.catalogo.application;

public abstract class UnitUseCase<IN> {

    public abstract void execute(IN anIn);
}
